tests/fixtures/positive/style/ForbiddenSuppress.kt
package style

@Suppress("ForbiddenRule")
fun example() {
    println("suppressed")
}
