tests/fixtures/negative/style/ForbiddenSuppress.kt
package style

@Deprecated("Use newExample instead")
fun example() {
    println("no suppress here")
}
